# fx

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: oanda_mock_testing.md  oanda_practice.md
src/fx/: config.py
src/fx/audit/: __init__.py  events.py  logger.py  sanitize.py
src/fx/backtest/: __init__.py  data.py  engine.py  metrics.py  result.py
src/fx/broker/: __init__.py  base.py  factory.py  mt5_stub.py  oanda.py  paper.py  safety.py
src/fx/execution/: __init__.py  executor.py  manager.py  policy.py  result.py
src/fx/instrument/: __init__.py  conversion.py  registry.py  spec.py
src/fx/risk/: __init__.py  config.py  decision.py  manager.py
src/fx/signal/: __init__.py  model.py
src/fx/strategy/: __init__.py  base.py  ema_cross.py  indicators.py
tests/audit/: test_events.py  test_logger.py  test_sanitize.py
tests/backtest/: test_engine.py  test_metrics.py
tests/broker/: test_base.py  test_factory.py  test_oanda.py  test_oanda_fake_transport.py  test_paper.py  test_safety.py
tests/broker/fakes/: fake_oanda.py
tests/execution/: test_executor.py  test_manager.py
tests/instrument/: test_conversion.py  test_registry.py
tests/integration/oanda/: conftest.py  helpers.py  test_helpers.py  test_oanda_practice_order.py  test_oanda_practice_readonly.py  test_oanda_practice_reject.py
tests/risk/: test_manager.py
tests/signal/: test_model.py
tests/strategy/: test_ema_cross.py  test_indicators.py
