[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fx"
version = "0.1.0"
description = "FX Trading System with pluggable broker adapters"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
mt5 = [
    "MetaTrader5>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
